force-app/main/default/objects/Account/fields/Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Disqualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies  if an account is qualified or not for loan</description>
    <label>Disqualified</label>
    <type>Checkbox</type>
</CustomField>