force-app/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7-1 ARM</fullName>
            </value>
            <value>
                <fullName>Product 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>